# hhautoapply

./: .env.example  .gitignore  Dockerfile  INSTALL.md  README.md  alembic.ini  docker-compose.yml  manual_login.py  otp_login_cli.py  pyproject.toml
app/: config.py  main.py  support_bot.py
app/ai/: claude.py  prompts.py  rule_analyzer.py
app/bot/: handlers.py  hh_connect.py  keyboards.py  task_menu.py
app/models/: __init__.py  ai_generation.py  application.py  base.py  blacklist.py  company.py  message.py  search_task.py  session.py  user.py  user_settings.py  vacancy.py
app/parsers/: __init__.py  base.py  geekjob.py  hh.py  hh_api.py  hh_login.py  hh_oauth.py  hh_playwright.py  hh_resume.py  hh_user_client.py  letter_template.py  workspace.py
app/services/: tg_userbot.py
app/userbot/: manager.py
app/utils/: anti_detect.py  browser.py  rate_limiter.py
app/workers/: apply_worker.py  message_worker.py  scheduler.py  user_runner.py  vacancy_worker.py
configs/: resume.example.txt
deploy/: setup_vps.sh
migrations/: env.py
scripts/: setup.sh
