[project]
name = "job-hunter"
version = "0.1.0"
description = "AI-powered auto-apply system for Russian job platforms"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "sqlalchemy[asyncio]>=2.0.36",
    "asyncpg>=0.30.0",
    "alembic>=1.14.0",
    "redis>=5.2.0",
    "aiogram>=3.14.0",
    "playwright>=1.49.0",
    "anthropic>=0.40.0",
    "httpx>=0.28.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.6.0",
    "python-dotenv>=1.0.1",
    "apscheduler>=3.10.4",
    "beautifulsoup4>=4.12.3",
    "lxml>=5.3.0",
    "cryptography>=44.0.0",
    "structlog>=24.4.0",
    "tenacity>=9.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.8.0",
]

[tool.ruff]
line-length = 120
target-version = "py312"
